--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="ar">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.png" />
+    <link rel="icon" href="./logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
-    <title>RollandsCaffee</title>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
+    <title>resturant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
